--- a/anonvote/templates/index.html
+++ b/anonvote/templates/index.html
@@ -1,13 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>AnonVote</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="/static/css/main.css" rel="stylesheet" />
-  </head>
-
-  <body>
-    <h1>Hello World</h1>
-  </body>
-</html>
+{% extends 'base.html' %} {% block content %}
+<h1>Hello World</h1>
+{% endblock %}
